# Enterprise-Agent-Research-System

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-05-16-strategy-optimization.md  2026-05-16-us-stock-quant-mvp.md
docs/superpowers/specs/: 2026-05-16-quant-upgrade-phase1-design.md  2026-05-16-strategy-optimization-design.md  2026-05-16-us-stock-quant-mvp-design.md
src/quant_agent/: __main__.py  adaptive_risk.py  backtest.py  broker.py  config.py  indicators.py  journal.py  market_clock.py  market_data.py  models.py  monitor.py  optimizer.py  risk.py  sample_data.py  screener.py  server.py  strategy.py  trading_cycle.py  universe.py
src/quant_agent/crypto/: __init__.py  aggregator.py  base.py  bot.py  broker.py  bybit.py  models.py  okx.py  risk.py
src/quant_agent/indicators/: __init__.py  adx.py  atr.py  bollinger.py  kdj.py  macd.py  rsi.py  sma.py  supertrend.py
src/quant_agent/news/: __init__.py  analysis.py  finnhub.py
src/quant_agent/static/: crypto.html  dashboard.html
src/quant_agent/strategies/: __init__.py  base.py  dca.py  grid.py  martingale.py  multi_indicator.py  regime_switch.py  trend_rsi.py
tests/: test_backtest.py  test_config.py  test_indicators_strategy.py  test_journal_cli_broker.py  test_market_data_clock.py  test_optimizer.py  test_risk.py  test_server.py  test_trading_cycle.py  test_trading_sync.py
