[project]
name = "quant-agent"
version = "0.1.0"
description = "US stock quant backtest and paper-trading MVP"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
web = ["flask>=3.0"]
crypto = ["websockets>=12.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["--basetemp=.pytest-tmp"]
